--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 	<meta charset="utf-8">
 	<script>
 		// TODO: create a handler
+		function setSearchEngine() {
+			
+		}
     window.addEventListener("load", function(){
-        // TODO: register the handler
+       
+		// TODO: register the handler
     });
 	</script>
 </head>
@@ -13,7 +17,13 @@
 <body>
 
 	<form id="searchForm">
-    <!-- TODO: add form elements -->
-	</form>
+	<!-- TODO: add form elements -->
+	<input type="text" name="q"/>
+		<label>Google<input type="radio" name="engine" value="google"/></label>
+		<label>Duck Duck Go<input type="radio" name="engine" value="duck"/></label>
+		<label>Bing<input type="radio" name="engine" value="bing"/></label>
+		<label>Ask<input type="radio" name="engine" value="ask"/></label>
+		<button>Go!</button>
+		</form>
 
 </body>
